Fixed issue with scrollbar in quick view

--- a/src/layouts/DefaultLayout/DefaultLayout.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.scss
@@ -27,6 +27,12 @@ body.quick-view {
             overflow: hidden;
         }
     }
+    
+    .main {
+        .container-fluid {
+            overflow-y: hidden;
+        }
+    }
 }
 
 .app-body {
